fix: background color of active class of menu

--- a/app/src/index.css
+++ b/app/src/index.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.menu li > *:not(ul):not(.menu-title):not(details):active {
+  @apply bg-red-400 text-white;
+}
